fixed alignment of layouts

--- a/Styling/home.css
+++ b/Styling/home.css
@@ -21,10 +21,15 @@ body {
     color: #000000;
 }
 
+.main_container {
+    border: 1px rgb(255, 255, 255) solid;
+}
+
 #home {
     width: 100%;
-    height: 700px;
+    max-height: 600px;
     border: 1px rgb(255, 255, 255) dashed;
+    box-sizing: border-box;
 }
 
 .name {
@@ -38,7 +43,7 @@ body {
 
 .row {
     border: 1px rgb(255, 255, 255) dashed;
-    height: 545px;
+    height: 600px;
     font-weight: 900;
     font-size: 100px;
     text-align: center;
@@ -64,7 +69,7 @@ body {
 
 .image {
     border: 1px rgb(255, 255, 255) solid;
-    height: 80%;
+    max-height: 80%;
     width: 40%;
     margin-top: 20px;
     border-radius: 50%;
@@ -92,7 +97,7 @@ body {
 #my_pic_container {
     height: 500px;
     background-color: #ffffff;
-    border: 1px firebrick dashed;
+    border: 1px rgb(255, 255, 255) dashed;
 }
 
 .buttons {
@@ -107,26 +112,27 @@ body {
 }
 
 #projects {
-    background-color: hsl(0, 0%, 100%);
-    height: 500px;
+    border: 1px  hsl(0, 0%, 100%) solid;
+    height: 700px;
     text-align: left;
     font-family: Roboto, sans-serif;
     font-weight: 900;
     font-size: 60px;
     padding-left: 5%;
     padding-top: 30px;
+    align-items: center;
 }
 
 #work,
 #skills {
-    width: 100%;
-    height: 500px;
+    height: 600px;
     text-align: left;
     font-family: Roboto, sans-serif;
     font-weight: 900;
     font-size: 60px;
     padding-left: 5%;
-    padding-top: 30px;
+    padding-top: 20px;
+    border: 1px rgb(255, 255, 255) dashed;
 }
 
 #work {
@@ -137,22 +143,24 @@ body {
     background-color: #ffffff;
 }
 
-.individual_skills,
+.individual_skills{
+    font-size: 20px;
+    font-weight: 900;
+    padding: 20px;
+    height: 300px;
+}
 .individual_project {
     font-size: 20px;
     font-weight: 900;
     padding: 20px;
-    max-height: 400px;
+    min-height: 300px;
 }
-
-
 .skill {
     text-align: center;
     font-family: Roboto, sans-serif;
     font-variant: all-small-caps;
-    height: 200px;
+    height: 300px;
 }
-
 i,
 span {
     font-weight: 700;
@@ -160,24 +168,20 @@ span {
     font-size: 70px;
     color: #000000;
 }
-
 .icon {
     font-size: 15px;
     color: #137ae0;
     margin-left: 10px;
 }
-
 .skill p {
     font-size: 15px;
     font-weight: 100;
     font-variant: normal;
 }
-
 #resume {
     text-decoration: none;
 
 }
-
 
 #linkedin {
     color: #ffffff;
